<resources>
    <string name="app_name">Appisode</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_hint">Name of the series</string>
    <string name="progress_bar">Please, wait…</string>
    <string name="unauthorized">Unauthorized - need token</string>
    <string name="no_connection">No internet connection</string>
    <string name="subs_delete">Subscription will be deleted</string>
    <string name="cancel">cancel</string>
    <string name="input_phone">Enter phone number</string>
    <string name="input_code">Enter the code from sms</string>
    <string name="invalid_code">Invalid code</string>

    <string name="tab_3">MY</string>
    <string name="tab_2">POPULAR</string>
    <string name="tab_1">NEW</string>

    <string name="Calls">Subscription</string>

    <string name="Hours">H</string>
    <string name="Days">D</string>
    <string name="Months">M</string>

    <string name="title_activity_step2">Step2Activity</string>
    <string name="title_activity_step3">Step3Activity</string>
    <string name="title_activity_step4">Step4Activity</string>
    <string name="title_activity_step5">Step5Activity</string>
    <string name="speak_now">Speak now</string>


    <string name="newepisode">СООБЩИТ О ВЫХОДЕ СЕРИИ ИЛИ СЕЗОНА</string>
    <string name="newepisode2">ТВОИХ ЛЮБИМЫХ СЕРИАЛОВ</string>
    <string name="okay">Okay</string>
    <string name="choose">ВЫБИРАЙ СЕРИАЛ, ВКЛЮЧАЙ УВЕДОМЛЕНИЯ</string>
    <string name="choose2">И НЕ БЕСПОКОЙСЯ. АППИЗОД НИЧЕГО НЕ ПРОПУСТИТ</string>
    <string name="binding">ТЕКСТ ПРО НЕОБХОДИМОСТЬ</string>
    <string name="binding2">ПРИВЯЗКИ ТЕЛЕФОНА</string>
    <string name="verificationcode">ПРОВЕРОЧНЫЙ КОД</string>
    <string name="confirmation">ПОДТВЕРДИТЕ УКАЗАННЫЙ НОМЕР</string>
    <string name="confirmation2">ПРОВЕРОЧНЫМ КОДОМ ИЗ СМС</string>
    <string name="close">Close</string>
    <string name="right">Right!</string>
    <string name="allright">ТЕПЕРЬ ВЫ МОЖЕТЕ ЧТО-ТО ТАМ. НУЖЕН</string>
    <string name="allright2">ТЕКСТ О ТОМ, КАК ТЕПЕРЬ ВСЕ</string>
    <string name="seriescomesout">Episode comes out</string>
    <string name="closedtheseries">сериал закрыт</string>
    <string name="notifyme">уведомить меня, если</string>
    <string name="tobecontinued">будет продолжение</string>
    <string name="series">Episode</string>
    <string name="season">Season</string>
    <string name="data">27 ФЕВРАЛЯ 2017</string>
    <string name="fseason">1 season</string>
    <string name="overseries">СЕРИАЛ ЗАВЕРШЕН</string>
    <string name="data2">27 ФЕВРАЛЯ 2017</string>
    <string name="seriescomesout2">Episode comes out</string>
</resources>
