<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_step4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    tools:context="com.example.romanchuk.appisode.auth.Step4Activity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:textCursorDrawable="@drawable/color_cursor"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_title_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/etPhoneNumber"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutButtonStep3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="120dp">

            <Button
                android:id="@+id/btnStep3"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:background="@drawable/accept_button"
                android:text="@string/okay"
                android:textAlignment="center"
                android:textColor="@color/color_white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_marginBottom="20dp"
                    android:id="@+id/textSing2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verificationcode"
                    android:textColor="@color/color_white"
                    android:textSize="26sp" />
                <TextView
                    android:layout_marginTop="40dp"
                    android:id="@+id/textSing2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmation"
                    android:textColor="@color/color_white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textSing2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmation2"
                    android:textColor="@color/color_white"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
