<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_step1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sing1"
    tools:context="com.example.romanchuk.appisode.auth.Step1Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="45dp">

            <ImageView
                android:id="@+id/imgMyImage"
                android:layout_width="59dp"
                android:layout_height="63dp"
                android:adjustViewBounds="true"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_sing_dz" />
        </RelativeLayout>

        <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/main_backgroundImage"
                android:layout_width="wrap_content"
                android:layout_height="71dp"
                android:padding="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_sing1_logo" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/textSing1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newepisode"
                    android:textColor="@color/color_white"
                    android:textSize="20sp" />
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/textSing1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newepisode2"
                    android:textColor="@color/color_white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutShapesStep1"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="15dp"
                android:background="@drawable/step_shape_active" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="15dp"
                android:background="@drawable/step_shape_inactive" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="15dp"
                android:background="@drawable/step_shape_inactive" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_above="@id/layoutShapesStep1"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnStep2"
                android:textColor="@color/color_white"
                android:textAlignment="center"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:background="@drawable/accept_button"
                android:text="@string/okay"
                android:textSize="22sp" />
        </LinearLayout>

        <ViewFlipper
            android:id="@+id/flipper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </ViewFlipper>

    </RelativeLayout>


</RelativeLayout>
