<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    android:paddingBottom="1dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="0dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardPreventCornerOverlap="false"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imgMyImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:minHeight="75dp"
            android:minWidth="75dp"
            android:padding="0dp"
            android:scaleType="fitXY" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:background="@color/color_black" />

        <RelativeLayout
            android:id="@+id/linearLayoutParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="0dp"
            android:paddingTop="0dp">

            <TextView
                android:paddingTop="30dp"
                android:id="@+id/textViewNameOriginal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="name_original"
                android:textColor="@color/color_title_en"
                android:textSize="21dp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="72dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_gravity="center"
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Months"
                        android:textColor="@color/color_grey"
                        android:textSize="21sp" />

                    <TextView
                        android:layout_gravity="center"
                        android:id="@+id/textViewAirDateDetailedMonths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/color_white"
                        android:textSize="42sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="72dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_gravity="center"
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Days"
                        android:textColor="@color/color_grey"
                        android:textSize="21sp" />

                    <TextView
                        android:layout_gravity="center"
                        android:id="@+id/textViewAirDateDetailedDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/color_white"
                        android:textSize="42sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_gravity="center"
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Hours"
                        android:textColor="@color/color_grey"
                        android:textSize="21sp" />

                    <TextView
                        android:layout_gravity="center"
                        android:id="@+id/textViewAirDateDetailedHours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/color_white"
                        android:textSize="42sp" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/iconCallButton1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/Calls"
                    android:padding="20dp"
                    android:scaleType="fitCenter" />

                <ImageView
                    android:id="@+id/iconCallButton"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/Calls"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_call_img"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_above="@+id/textViewAirDate"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewEpisodeNumberAired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textColor="@color/color_accent"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/textViewEpisodeAired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seriescomesout2"
                    android:textColor="@color/color_grey"
                    android:textSize="21sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewAirDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal"
                android:text="name"
                android:textColor="@color/color_white"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewNameOriginal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp"
                android:gravity="center_horizontal"
                android:text="name"
                android:textColor="@color/color_white"
                android:textSize="42sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>