<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_step3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sing2"
    tools:context="com.example.romanchuk.appisode.auth.Step3Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imgMyImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_sing2_logo" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/layoutShapesStep2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="15dp"
                android:background="@drawable/step_shape_inactive" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="15dp"
                android:background="@drawable/step_shape_inactive" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="15dp"
                android:background="@drawable/step_shape_active" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutButtonStep3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/layoutShapesStep2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btnStep3"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:background="@drawable/accept_button"
                android:text="@string/okay"
                android:textAlignment="center"
                android:textColor="@color/color_white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/layoutButtonStep3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:textColor="@color/color_white"
                    android:textColorHint="@color/color_title_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/etPhoneNumber"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/textSing2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/binding"
                    android:textColor="@color/color_white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/textSing2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/binding2"
                    android:textColor="@color/color_white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
